--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,8 +18,8 @@
 <resources>
     <color name="photo_placeholder">#ccc</color>
 
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
-    <color name="theme_accent">#04561A</color>
+    <color name="theme_primary">#f48fb1</color>
+    <color name="theme_primary_dark">#bf5f82</color>
+    <color name="theme_accent">#1565c0</color>
     <color name="ltgray">#2b2b2b</color>
 </resources>
